--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,21 +1,23 @@
 .btn-default {
     width: 130px;
     height: 60px;
-    background-color: var(--color-primary);
-    color: var(--color-grey-0);
+    background-color: var(--color-300);
+    color: var(--color-0);
 
-    :hover {
-        background-color: var(--color-grey-100);
+    &:hover {
+        background-color: var(--color-primary);
     }
 }
 
 .btn-medium {
     width: 130px;
     height: 40px;
-    background-color: var(--color-primary);
-    color: var(--color-grey-0);
+    background-color: var(--color-300);
+    color: var(--color-0);
+    border-radius: 8px;
+    line-height: 16.94px;
 
-    :hover {
-        background-color: var(--color-grey-100);
+    &:hover {
+        background-color: var(--color-primary);
     }
 }
