--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -2,6 +2,7 @@ body {
     font-size: 14px;
     font-weight: 600;
     font-family: 'Inter', sans-serif;
+    line-height: 24px;
 }
 
 
@@ -21,6 +22,7 @@ body {
 
 .Heading3 {
     font-size: 18px;
+    line-height: 24px;
 }
 
 .Headline{
@@ -31,4 +33,12 @@ body {
 .Caption{
     font-size: 12px;
     font-weight: 400;
+    line-height: 16px;
+}
+
+.Price{
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 24px;
+    color: var(--color-primary);
 }
