--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -6,14 +6,35 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
+    margin-top: 10px;
 
     div {
         display: flex;
+        flex-direction: column;
+        
     }
 
     img {
         width: 158.94px;
         height: 36.83px;
+    }
+
+    button {
+        position: relative;
+        margin-right: 26px;
+        background-color: var(--color-0);
+
+        span {
+            position: absolute;
+            top: -10px;
+            right: -3px;
+            background-color: var(--color-primary);
+            border-radius: 6px;
+            padding: 0.5px 5px;
+            font-weight: 900;
+            font-size: 12px;
+            color: var(--color-100);
+        }
     }
 
 }
