--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,7 @@
 
     --color-600: #333333;
     --color-300: #828282;
+    --color-200: #BDBDBD;
     --color-100: #E0E0E0;
     --color-0: #F5F5F5;
 
