--- a/src/components/CartModal/styles.module.scss
+++ b/src/components/CartModal/styles.module.scss
@@ -10,63 +10,79 @@
     align-items: center;
     width: 100%;
     height: 100%;
-}
 
-.modalContent {
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    width: 397px;
-    height: 408px;
-    display: flex;
-    flex-direction: column;
-}
-
-.headerCart {
-    background-color: var(--color-primary);
-    display: flex;
-    justify-content: space-between;
-    height: 57px;
-    border-radius: 5px 5px 0 0;
-
-    button {
+    .modalContent {
+        background-color: #fff;
         border-radius: 5px;
-        background-color: var(--color-primary);
-        color: var(--color-100);
-    }
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        width: 397px;
+        height: 408px;
+        display: flex;
+        flex-direction: column;
 
-    h2 {
-        color: var(--color-0);
-        margin: 14px 0 0 14px;
+        .headerCart {
+            background-color: var(--color-primary);
+            display: flex;
+            justify-content: space-between;
+            height: 57px;
+            border-radius: 5px 5px 0 0;
+
+            button {
+                border-radius: 5px;
+                background-color: var(--color-primary);
+                color: var(--color-100);
+            }
+
+            h2 {
+                color: var(--color-0);
+                margin: 14px 0 0 14px;
+            }
+        }
+
+        .footerContent {
+            height: 121px;
+            margin-top: auto;
+
+            .priceContent {
+                display: flex;
+                justify-content: space-between;
+                margin: 0 15px 0 14px;
+            }
+
+            .removeButton {
+                width: 100%;
+                margin: 14px 0 18px 0;
+
+                button {
+                    width: 368px;
+                    height: 60px;
+                    background-color: var(--color-200);
+                    color: var(--color-0);
+                    margin: 0 auto;
+                    display: flex;
+                    margin-right: 15px;
+                    margin-left: 14px;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 5px;
+                }
+            }
+        }
     }
 }
 
-.footerContent {
-    height: 121px;
-    margin-top: auto;
 
-    .priceContent{
-        display: flex;
-        justify-content: space-between;
-        margin: 0 15px 0 14px;
-    }
 
-    .removeButton {
-        width: 100%;
-        margin: 14px 0 18px 0;
+@media (min-width:800px) {
+    .modalContent {
+        width: 484px;
 
-        button {
-            width: 368px;
-            height: 60px;
-            background-color: var(--color-200);
-            color: var(--color-0);
-            margin: 0 auto;
-            display: flex;
-            margin-right: 15px;
-            margin-left: 14px;
-            justify-content: center;
-            align-items: center;
-            border-radius: 5px;
+        .footerContent{
+            .removeButton{
+                button{
+                    width: 454px;
+                }
+            }
         }
     }
 }
