--- a/src/components/CartModal/styles.module.scss
+++ b/src/components/CartModal/styles.module.scss
@@ -35,8 +35,21 @@
 
             h2 {
                 color: var(--color-0);
-                margin: 14px 0 0 14px;
+                margin: 14px 0 14px 14px;
             }
+        }
+
+        .itemContainer {
+            width: 363.31px;
+            margin: 14px 15px 0px 15px;
+            overflow-y: auto;
+
+            ul {
+                li {
+                    margin-bottom: 14px;
+                }
+            }
+
         }
 
         .footerContent {
@@ -47,21 +60,20 @@
                 display: flex;
                 justify-content: space-between;
                 margin: 0 15px 0 14px;
+                padding-top: 10px;
+                border-top: 1px solid var(--color-100);
             }
 
             .removeButton {
                 width: 100%;
-                margin: 14px 0 18px 0;
+                margin: 14px 15px 18px 18px;
 
                 button {
                     width: 368px;
                     height: 60px;
                     background-color: var(--color-200);
                     color: var(--color-0);
-                    margin: 0 auto;
                     display: flex;
-                    margin-right: 15px;
-                    margin-left: 14px;
                     justify-content: center;
                     align-items: center;
                     border-radius: 5px;
@@ -77,9 +89,9 @@
     .modalContent {
         width: 484px;
 
-        .footerContent{
-            .removeButton{
-                button{
+        .footerContent {
+            .removeButton {
+                button {
                     width: 454px;
                 }
             }
