--- a/src/components/CartModal/CartItemCard/styles.module.scss
+++ b/src/components/CartModal/CartItemCard/styles.module.scss
@@ -7,6 +7,7 @@
     }
 
     .imgContent {
+        position: relative;
         width: 82.26px;
         height: 80px;
         background-color: var(--color-100);
@@ -17,10 +18,23 @@
             width: 55px;
             margin: 13px 13.26px 12px 14px;
         }
+
+        span {
+            position: absolute;
+            top: 0;
+            right: 57px;
+            background-color: var(--color-primary);
+            border-radius: 6px;
+            padding: 0.5px 5px;
+            font-weight: 900;
+            font-size: 12px;
+            color: var(--color-100);
+
+        }
     }
 
     .infoContainer {
-        flex: 1; 
+        flex: 1;
         margin-left: 20px;
         margin-top: 17px;
         display: flex;
