--- a/src/components/CartModal/CartItemCard/styles.module.scss
+++ b/src/components/CartModal/CartItemCard/styles.module.scss
@@ -3,6 +3,7 @@
     justify-content: space-between;
 
     button {
+        position: relative;
         background-color: var(--color-0);
     }
 
@@ -21,11 +22,12 @@
 
         span {
             position: absolute;
-            top: 0;
-            right: 57px;
+            top: 19px;
+            left: 280px;
+            border: 2px solid var(--color-200);
             background-color: var(--color-primary);
             border-radius: 6px;
-            padding: 0.5px 5px;
+            padding: 3px 5px;
             font-weight: 900;
             font-size: 12px;
             color: var(--color-100);
@@ -46,3 +48,5 @@
     }
 
 }
+
+@media (min-width:800px) {}
