--- a/src/components/CartModal/styles.module.scss
+++ b/src/components/CartModal/styles.module.scss
@@ -40,7 +40,7 @@
         }
 
         .itemContainer {
-            width: 363.31px;
+            width: 91.5%;
             margin: 14px 15px 0px 15px;
             overflow-y: auto;
 
@@ -69,7 +69,7 @@
                 margin: 14px 15px 18px 18px;
 
                 button {
-                    width: 368px;
+                    width: 93%;
                     height: 60px;
                     background-color: var(--color-200);
                     color: var(--color-0);
@@ -86,15 +86,15 @@
 
 
 @media (min-width:800px) {
-    .modalContent {
-        width: 484px;
-
-        .footerContent {
-            .removeButton {
-                button {
-                    width: 454px;
-                }
-            }
+    .modal {
+        .modalContent {
+            width: 484px;
         }
+
+        .itemContainer {
+            width: 100%
+        }
+
+
     }
 }
