--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,20 +1,16 @@
 .flexBox {
     display: flex;
-    flex-direction: row;
-    min-width: 414px;
+    width: 100%;
     height: 76px;
-    justify-content: space-between;
     align-items: center;
 
     div {
+        margin: 0 16px;
+        width: 100%;
+        height: 39px;
         display: flex;
-        flex-direction: column;
-        margin: 10px 0 0 16px;
-
-        form {
-            display: flex;
-            align-items: center;
-        }
+        align-items: center;
+        justify-content: space-between;
     }
 
     img {
@@ -24,7 +20,6 @@
 
     button {
         position: relative;
-        margin-right: 26px;
         background-color: var(--color-0);
 
         span {
@@ -44,6 +39,7 @@
 
 @media (min-width:800px) {
     .flexBox {
+        height: 80px;
 
         button {
             margin-right: 15px;
