--- a/src/components/ProductList/styles.module.scss
+++ b/src/components/ProductList/styles.module.scss
@@ -10,7 +10,9 @@
 
 .flexList {
   display: inline-flex;
+  justify-content: flex-start;
   flex-wrap: nowrap;
+
 
 }
 
@@ -22,6 +24,14 @@
 
   .flexList {
     flex-wrap: wrap;
-    margin: 0 100px;
+    margin: 0 116px;
+
+    li:nth-child(4n+1) {
+      margin-left: 0;
+    }
+
+    li:nth-child(4n) {
+      margin-right: 0;
+    }
   }
 }
