fix: corrigido width de 100% pra 1600px, cor e tamanho do ícone

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -37,8 +37,9 @@
 
 }
 
-@media (min-width:800px) {
+@media (min-width:1600px) {
     .flexBox {
+        width: 1600px;
         height: 80px;
 
         button {
