--- a/src/components/ProductList/ProductCard/styles.module.scss
+++ b/src/components/ProductList/ProductCard/styles.module.scss
@@ -52,7 +52,7 @@
 
 @media (min-width:800px) {
     .flexCard {
-        margin: 20px 22.671px 0 22.671px;
+        margin: 20px 22.671px 32px 22.671px;
     }
 
 }
