--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -42,14 +42,10 @@
         width: 1600px;
         height: 80px;
 
-        button {
-            margin-right: 15px;
-        }
 
         div {
             flex-direction: row;
-            margin-right: 112.19px;
-            margin-left: 112.19px;
+            margin: 0 116px;
 
             form {
                 margin-top: 5px;
