--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -37,9 +37,9 @@
 
 }
 
-@media (min-width:1600px) {
+@media (min-width:900px) {
     .flexBox {
-        width: 1600px;
+        width: 100%;
         height: 80px;
 
 
