--- a/src/components/ProductList/styles.module.scss
+++ b/src/components/ProductList/styles.module.scss
@@ -1,4 +1,5 @@
 .container {
+  display: flex;
   width: 100%;
   overflow-x: auto;
   white-space: nowrap;
@@ -16,23 +17,15 @@
 
 }
 
-@media (min-width:1600px) {
+@media (min-width:900px) {
 
   .container {
     overflow-x: initial;
   }
 
   .flexList {
-    width: 1368px;
+    width: 100%;
     flex-wrap: wrap;
-    margin: 0 116px 66px 116px;
-
-    li:nth-child(4n+1) {
-      margin-left: 0;
-    }
-
-    li:nth-child(4n) {
-      margin-right: 0;
-    }
+    margin: 0 83px 66px 83px;
   }
 }
