--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: 76px;
     align-items: center;
+    background-color: var(--color-0);
 
     div {
         margin: 0 16px;
